[tool.poetry]
name = "med-comparator"
version = "0.1.0"
description = ""
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"
packages = [{include = "med_comparator"}]

[tool.poetry.dependencies]
python = "^3.11.2"
pandas = "^2.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
